--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.Rest.Generator.Java
+@using System
+@using Microsoft.Rest.Generator.Java
 @using Microsoft.Rest.Generator.Java.Templates
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
@@ -36,7 +37,7 @@ public interface @Model.Name {
 @:    @property.Type get@(property.Name.ToPascalCase())();
 if(!property.IsReadOnly)
 {
-@EmptyLine    
+@EmptyLine
 @:    /**
 @:     * Sets @(property.Documentation).
 @:     *
@@ -78,7 +79,14 @@ if(!property.IsReadOnly)
     @foreach (var method in Model.MethodTemplateModels)
     {
     @:/**
-    @:@WrapComment(" * ", method.Documentation.EscapeXmlComment())
+    if (!String.IsNullOrEmpty(method.Summary))
+    {
+    @: * @method.Summary.EscapeXmlComment()
+    }
+    if (!String.IsNullOrEmpty(method.Description))
+    {
+    @: * @method.Description.EscapeXmlComment()
+    }
     @: *
     foreach (var param in method.LocalParameters)
     {
@@ -93,7 +101,14 @@ if(!property.IsReadOnly)
     @:@method.ReturnTypeString @(method.Name)(@method.MethodParameterDeclaration) throws ServiceException;
     @EmptyLine
     @:/**
-    @:@WrapComment(" * ", method.Documentation.EscapeXmlComment())
+    if (!String.IsNullOrEmpty(method.Summary))
+    {
+    @: * @method.Summary.EscapeXmlComment()
+    }
+    if (!String.IsNullOrEmpty(method.Description))
+    {
+    @: * @method.Description.EscapeXmlComment()
+    }
     @: *
     foreach (var param in method.LocalParameters)
     {
