--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
@@ -74,7 +74,7 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
   {
   @EmptyLine
   @:# Serialize Request
-  @:request_headers['Content-Type'] = 'application/json'
+  @:request_headers['Content-Type'] = '@(Model.ContentType)'
   @:@Model.CreateSerializationString(Model.RequestBody.Name, Model.RequestBody.Type, "request_content")
   }
 
