Add NodeJS Moment library for durations

--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupTemplate.cshtml
@@ -18,6 +18,10 @@ var WebResource = msRest.WebResource;
 @EmptyLine
 @:var models = require('../models');
 }
+@if (Model.ContainsTimeSpan)
+{
+@:var moment = require('moment');
+}
 @EmptyLine
 /**
  * @@class
