--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplateTS.cshtml
@@ -7,7 +7,8 @@
 @Header(" * ")
 */
 @EmptyLine
-import { RequestOptions, HttpOperationResponse } from "../node_modules/ms-rest/lib";
+/// <reference path="../typings/tsd.d.ts" />
+import { RequestOptions, WebResource } from "../node_modules/ms-rest/lib";
 @if (Model.ModelTypes.Any()) {
 @:import * as models from "../models";
 }
