--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplateTS.cshtml
@@ -7,7 +7,8 @@
 @Header(" * ")
  */
 @EmptyLine
-import { ServiceClientOptions } from "./node_modules/ms-rest/lib";
+/// <reference path="./typings/tsd.d.ts" />
+import { ServiceClientOptions, RequestOptions, WebResource } from "./node_modules/ms-rest/lib";
 @if (Model.ModelTypes.Any())
 {
 @EmptyLine
