Fixed comment formatting issue, imoprts, and added back non-operation group methods to service client class

--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplateTS.cshtml
@@ -7,8 +7,8 @@
 @Header(" * ")
 */
 @EmptyLine
-/// <reference path="../typings/tsd.d.ts" />
 import { RequestOptions, WebResource } from "../node_modules/ms-rest/lib";
+import * as stream from "stream";
 @if (Model.ModelTypes.Any()) {
 @:import * as models from "../models";
 }
