Fixed the ms-rest import

--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplateTS.cshtml
@@ -7,7 +7,7 @@
 @Header(" * ")
  */
 @EmptyLine
-import { ServiceClientOptions, RequestOptions, WebResource } from "./node_modules/ms-rest/lib";
+import { ServiceClientOptions, RequestOptions, WebResource } from "ms-rest";
 @if (Model.MethodTemplateModels.Any())
 {
 @:import * as models from "./models";
