--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplateTS.cshtml
@@ -7,7 +7,7 @@
 @Header(" * ")
 */
 @EmptyLine
-import { RequestOptions, WebResource } from "../node_modules/ms-rest/lib";
+import { RequestOptions, WebResource } from "ms-rest";
 import * as stream from "stream";
 @if (Model.ModelTypes.Any()) {
 @:import * as models from "../models";
