--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelTemplateTS.cshtml
@@ -22,7 +22,7 @@ export interface @(Model.Name) {
     var propertyList = new List<Property>(Model.ComposedProperties);
     for (int i = 0; i < propertyList.Count; i++)
     {
-    @:@(Model.PropertyTS(propertyList[i], true));
+    @:@(ModelTemplateModel.PropertyTS(propertyList[i], true));
     }
 }
 }
