Add LRO for PUT in Java.Azure client runtime

--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
@@ -111,7 +111,7 @@ if(!property.IsReadOnly)
     {
 @:        if (this.credentials != null)
 @:        {
-@:            this.credentials.applyCredentialsFilter(this);
+@:            this.credentials.applyCredentialsFilter(this.client);
 @:        }
     }
 
