Fix URL encoding and support HEAD method (for Retroit 2.0)

--- a/AutoRest/Generators/Java/Java/Templates/MethodGroupInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodGroupInterfaceTemplate.cshtml
@@ -40,7 +40,7 @@ public interface @Model.MethodGroupType {
     {
     @:    @@@(method.HttpMethod.ToString().ToUpper())("@(method.Url)")
     }
-    @:    Call<ResponseBody> @(method.Name)(@method.MethodParameterApiDeclaration);
+    @:    Call<@method.CallType> @(method.Name)(@method.MethodParameterApiDeclaration);
     @EmptyLine
     }
     }
@@ -71,7 +71,7 @@ public interface @Model.MethodGroupType {
     }
     @: * @@param serviceCallback the async ServiceCallback to handle successful and failed responses.
     @: */
-    @:Call<ResponseBody> @(method.Name)Async(@method.MethodParameterDeclarationWithCallback);
+    @:Call<@method.CallType> @(method.Name)Async(@method.MethodParameterDeclarationWithCallback);
     @EmptyLine
     }
 }
