Adding ISO8601 duration support to Azure.CSharp generator
This is a fix for this issue: https://github.com/Azure/autorest/issues/390
Some of the templates are duplicated between the CSharp and Azure.CSharp
flavors, so we have to be careful to make changes in both places. To validate
the fix, I simply copied some of the duration tests to the Azure.CSharp test
project. This was for expedience. We should consider better approaches to
ensuring parity of test coverage between flavors.

--- a/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureServiceClientTemplate.cshtml
@@ -223,7 +223,11 @@ namespace @Settings.Namespace
                 DateTimeZoneHandling = DateTimeZoneHandling.Utc,
                 NullValueHandling = NullValueHandling.Ignore,
                 ReferenceLoopHandling = ReferenceLoopHandling.Serialize,
-                ContractResolver = new ReadOnlyJsonContractResolver()
+                ContractResolver = new ReadOnlyJsonContractResolver(),
+                Converters = new List<JsonConverter>
+                    {
+                        new Iso8601TimeSpanConverter()
+                    }
             };
             SerializationSettings.Converters.Add(new ResourceJsonConverter()); 
             DeserializationSettings = new JsonSerializerSettings{
@@ -231,7 +235,11 @@ namespace @Settings.Namespace
                 DateTimeZoneHandling = DateTimeZoneHandling.Utc,
                 NullValueHandling = NullValueHandling.Ignore,
                 ReferenceLoopHandling = ReferenceLoopHandling.Serialize,
-                ContractResolver = new ReadOnlyJsonContractResolver()
+                ContractResolver = new ReadOnlyJsonContractResolver(),
+                Converters = new List<JsonConverter>
+                    {
+                        new Iso8601TimeSpanConverter()
+                    }
             };
             @foreach (var polymorphicType in Model.ModelTypes.Where(t => t.PolymorphicDiscriminator != null))
             {
