--- a/AutoRest/Generators/CSharp/Azure.CSharp/Templates/PageTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/Azure.CSharp/Templates/PageTemplate.cshtml
@@ -10,13 +10,14 @@ namespace @(Settings.Namespace).Models
     using System.Collections.Generic;
     using System.Linq;
     using Newtonsoft.Json;
+    using Microsoft.Rest.Azure;
 @EmptyLine
     /// <summary>
     /// Defines a page in Azure responses.
     /// </summary>
     /// <typeparam name="T">Type of the page content items</typeparam>
     [JsonObject]
-    public class @Model.TypeDefinitionName<T> : IEnumerable<T>
+    public class @Model.TypeDefinitionName<T> : IPage<T>
     {
          /// <summary>
          /// Gets the link to the next page.
